feat: 타인의 위시리스트 아이템 조회 기능 구현 (친구 공개 지원)
- GET /api/v2/wishlists/items/{memberId} 엔드포인트 추가
- 친구 관계 시 PUBLIC + FRIENDS_ONLY 위시리스트 조회 가능
- 비로그인/비친구 시 PUBLIC 위시리스트만 조회 가능
- WishlistItemDetail 도메인 레코드 추가 (상품명, 가격, 이미지, 품절/활성 여부)
- WishlistNotAccessibleException 추가 (W104, 조회 권한 없음)
- SecurityConfig: 해당 엔드포인트를 auth 필터 체인으로 이동 (선택적 인증 지원)